# binder_rs

./: .gitmodules  Cargo.toml  generate.sh
.helix/: languages.toml
android-powerstats/: Cargo.toml
android-powerstats/src/: android_hardware_power_stats.rs  android_os_powerstatsservice.rs  bundle.rs  lib.rs  result_receiver.rs
android-powerstats/src/android/hardware/power/stats/: Channel.rs  EnergyConsumer.rs  EnergyConsumerAttribution.rs  EnergyConsumerResult.rs  EnergyConsumerType.rs  EnergyMeasurement.rs  IPowerStats.rs  PowerEntity.rs  State.rs  StateResidency.rs  StateResidencyResult.rs  mod.rs
android-powerstats/src/android/os/: IPowerStatsService.rs
android-powerstats/src/com/android/internal/os/: IResultReceiver.rs
api_gen/: Cargo.toml
api_gen/src/: main.rs
binder/: Cargo.toml
binder/src/: binder.rs  lib.rs  parcel.rs  proxy.rs
binder/src/parcel/: parcelable.rs
binder_ndk_sys/: Cargo.toml  build.rs
binder_ndk_sys/src/: bindings.rs  lib.rs
example/src/: client.rs
