[package]
name = "android-powerstats"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
binder = { package = "binder_ndk", path = "../binder" }
bytemuck = "1"
lazy_static = "1.4.0"
